--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build --turbo",
@@ -9,14 +10,18 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.7",
+    "@types/nodemailer": "^7.0.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "lenis": "^1.3.17",
     "motion": "^12.23.26",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-ionicons": "^4.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
